# basic-codes-for-java-and-python-to-practice

./: README.md
Javabasictoadv/: Programs.java  Reverse.java  This.java  add.java  hello.java  int_to_bin.java  swap.java
Python/Amazon/: basic.ipynb  coding.ipynb  data.csv  file1.py  file2.py  hello.txt  new.txt  pre.ipynb  test.ipynb
Python/Basic code/: 1-pythonbasic.ipynb  2-List,Dictionary,Sets etc.ipynb  3-if_else.ipynb  4-Loop.ipynb  5-array.ipynb  6-numpy.ipynb  Datatypes 2.ipynb  pythonbasic 1 .ipynb
Python/Basic code/Project/: README.md  pyproject.toml
Python/Basic code/Project/fetch-research-papers/: __init__.py  fetch_papers.py
Python/Basic_code/: 2.1-List,Dictionary,Sets etc.ipynb  2.4-file_management.ipynb  5-array.ipynb  7-oop.ipynb  8-DSA.ipynb  beautiful_soup.ipynb  coding.ipynb  ex.ipynb
Python/Codes/: Untitled.ipynb  basic to adv .ipynb  health_data.csv  health_data.xlsx  health_predictions_output.csv  practice .ipynb
Python/Codes/codes/: List_Tuple_Set_Dic.ipynb  Untitled.ipynb  basic to adv .ipynb  health_data.csv  print.py
Python/Django/: readme.md
Python/Django/mysite/home/: url.py  views.py
Python/Django/mysite/home/templates/: index.html
Python/Django/mysite/mysite/: settings.py  urls.py
Web/: app.js  home.html
Web/JS/: app.js  home.html
Web/Node/first-app/: app.js  logger.js
